--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,11 +14,14 @@
 // reviews проблема с иконками на 320!!!
 // наверное только делать по 2 формуле на 45% отсталось если не делать все идеально
 // прпробывать 3 способ верски + flex deraction
-//прописать картинкам и возсможно кнопкам lh0!!!
+
 
 // наверное надо удалить весь адаптив и сделать заного и тогда и 45% тоже
 // доделать версию и исправить мал проблемы
 // протестить резиновою верстку на контент кортинок растягивается или нет
+
+// версия на flex c длинной сеткой
+// в этом блоке можно убрать часть кода для других версий и именно много было flex galery
 
 
 .header {
@@ -45,7 +48,10 @@
     justify-content: space-between;
     @include adaptiveValue("grid-gap", 35, 20);
 
-    &__logo {
+    &__img {
+        width: rem(85);
+        height: rem(40);
+        object-fit: contain;
         line-height: 0;
     }
 
@@ -99,12 +105,6 @@
         }
     }
 
-    &__logo {
-        width: 85px;
-        height: 40px;
-        object-fit: contain;
-    }
-
     &__items {
         display: flex;
         justify-content: space-between;
@@ -133,10 +133,6 @@
         text-align: center;
         transition: color .5s;
 
-        // @media (max-width: 992px) {
-        //     width: 100%;
-        // }
-
         &:focus {
             color: $focus;
         }
@@ -158,14 +154,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        // display: grid;
-        // grid-template-columns: repeat(2, 1fr);
         @include adaptiveValue("gap", 40, 20);
-
-        // @media (max-width: 992px) {
-        //     grid-template-columns: repeat(3, 1fr);
-        //     align-items: center;
-        // }
     }
 
     &__button {
@@ -216,21 +205,14 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        // ------------
-        // display: grid;
-        // grid-template-columns: repeat(2, 1fr);
-
 
         @media (max-width: 992px) {
-            // grid-template-columns: inherit;
-            // place-content: center;
             flex-direction: column-reverse;
         }
     }
 
     &__box {
         @media (max-width: 992px) {
-            // max-width: 100%;
             grid-row-start: 2;
         }
     }
@@ -267,8 +249,6 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        // display: grid;
-        // grid-template-columns: repeat(auto-fit, minmax(36rem, 1fr));
         gap: 30px; //нужен
     }
 
@@ -288,8 +268,6 @@
         clip-path: url(#mask4);
         width: 63px;
         height: 54px;
-
-        // display: grid;
         display: flex;
         justify-content: center; //возможно по другому через абсолют
         align-items: center;
@@ -365,7 +343,6 @@
         font-weight: 500;
         max-width: rem(300);
         margin: 0 auto rem(20);
-
     }
 
     &__text {
@@ -385,35 +362,26 @@
     }
 
     &__wrapper {
-        // display: grid;
-        // grid-template-columns: repeat(12, 1fr);
-        // остоновился тут
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-
         @include adaptiveValue("row-gap", 65, 20);
         @include adaptiveValue("grid-column-gap", 30, 20);
         margin-bottom: rem(65);
 
-        // @media (max-width: 576px) {
-        //     grid-template-columns: repeat(auto-fit, minmax(3rem, 1fr));
-        // }
+        @media (max-width: 992px) {
+            grid-column-gap: 20px;
+        }
+
+        @media (max-width: 768px) {
+            grid-column-gap: 105px;
+        }
     }
 
     &__article {
         cursor: pointer;
         text-align: center;
         transition: opacity .5s;
-        grid-column-end: span 4;
-
-        @media (max-width: 576px) {
-            grid-column-end: span 6;
-        }
-
-        &--big {
-            grid-column-end: span 6;
-        }
 
         &--small {
             max-width: 360px; //удалить лишний модификатор в других версиях!!
@@ -434,7 +402,6 @@
 
     &__images {
         background-color: #FCF2EB;
-        // padding: rem(70) rem(90);//!!
         @include adaptiveValue("padding-bottom", 70, 20);
         @include adaptiveValue("padding-top", 70, 20);
         @include adaptiveValue("padding-left", 90, 10);
@@ -451,10 +418,6 @@
         object-fit: contain;
         width: rem(200);
         height: rem(200);
-
-        // @media (max-width: 576px) {
-        //     height: rem(300); //не получилось по другому сделал картинки одинаковыми
-        // }
     }
 
     &__box {
@@ -497,20 +460,7 @@
         display: flex;
         align-items: center;
         flex-wrap: wrap;
-        // justify-content: center;
-        // -----------------
-        // display: grid;
-        // grid-template-columns: repeat(2, 60% 40%);
-        // align-items: center;
-        // justify-items: center;
         gap: 20px; //иожет быть скролл
-
-        // @media (max-width: 1200px) {
-        //     grid-template-columns: repeat(2, 48% 48%);
-        // }
-        @media (max-width: 992px) {
-            // justify-content: center;
-        }
 
         @media (max-width: 768px) {
             display: block;
@@ -539,13 +489,10 @@
         @media (max-width: 768px) {
             margin-bottom: 20px;
             width: 100%;
-            // object-position: -120px 0px;
-            // object-fit: none;
         }
     }
 
     &__box {
-        // max-width: rem(485);
         max-width: rem(445);
         margin-left: auto;
 
@@ -576,7 +523,6 @@
         margin-bottom: rem(20);
     }
 
-
     &__text {
         display: -webkit-box;
         -webkit-line-clamp: 6;
@@ -598,8 +544,6 @@
 
     &__items {
         @include adaptiveValue("margin-bottom", 50, 20);
-        // display: grid;
-        // grid-template-columns: repeat(auto-fit, minmax(36rem, 1fr));
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
@@ -633,12 +577,12 @@
     }
 
     &__img {
-        width: rem(315);
-        height: rem(270);
+        width: 315px;
+        height: 270px;
         clip-path: url(#mask3);
         object-fit: cover;
 
-        @media (max-width: 1200px) {
+        @media (max-width: 576px) {
             clip-path: inherit;
         }
 
@@ -697,35 +641,21 @@
     }
 }
 
-.gallery {
 
-    // в этом блоке можно убрать часть кода для других версий и именно много было flex
+
+.gallery {
     &__wrapper {
-        // display: grid;
-        // grid-template-columns: repeat(auto-fit, minmax(33rem, 1fr));
         display: flex;
         justify-content: center;
-        // flex-wrap: wrap;
-        // grid-auto-flow: wrap;
         @include adaptiveValue("gap", 30, 20);
 
         @media (max-width: 992px) {
-            // display: block;
             flex-wrap: wrap;
         }
     }
 
     &__left {
-        // display: flex;
-        // flex-direction: column;
-        // justify-content: end;
-        // align-items:end;
-        // max-width: 50%;
-        max-width: rem(555);
-
-        // align-items: end;
-        // скорей всего удалить весь лефт с ксс
-        // остановился
+        max-width: rem(555); // скорей всего удалить весь лефт с ксс
         @media (max-width: 576px) {
             width: 100%;
             max-width: 100%;
@@ -744,31 +674,21 @@
         color: $black;
         text-align: center;
         margin-bottom: rem(45);
-        // max-width: rem(555);
     }
 
     &__content {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
-        // justify-content: start;
-
-        // max-width: rem(470);
-        // display: grid;
-        // grid-template-columns: repeat(2, 1fr);
         @include adaptiveValue("gap", 30, 20);
     }
 
     &__item {
         border-radius: 5px;
         transition: opacity .5s;
-        // display: flex;
-        // display: grid;
         cursor: pointer;
-
         @media (max-width: 576px) {
             width: 100%;
-            // max-width: 100%;
         }
 
         &:focus {
@@ -785,46 +705,33 @@
 
         &--1 {
             background-color: rgb(56%, 4%, 3%, 0.1);
-            // max-width: rem(260);
         }
 
         &--2 {
             background-color: rgb(14%, 24%, 49%, 0.1);
-            // max-width: rem(260);
         }
 
         &--3 {
             background-color: rgb(50%, 0%, 15%, 0.1);
-            // max-width: rem(260);
         }
 
         &--4 {
             background-color: rgb(77%, 55%, 68%, 0.1);
-            // max-width: rem(260);
         }
 
         &--5 {
             background-color: rgb(77%, 8%, 29%, 0.1);
-            // max-width: rem(555);
-            // max-width: 50%;
         }
     }
 
     &__link {
-        // display: grid;
-        // place-content: center;
         display: flex;
-        // justify-content: center;
-        // align-items: center;
         padding-bottom: rem(30);
         padding-top: rem(30);
         padding-left: rem(25);
         padding-right: rem(25);
 
-        // padding-bottom: rem(35);
-        // padding-top: rem(35);
         @media (max-width: 576px) {
-            // margin: 0 auto;
             justify-content: center;
         }
 
@@ -833,36 +740,17 @@
             padding-top: rem(40);
             padding-left: rem(45);
             padding-right: rem(45);
-            // padding-bottom: rem(35);
-            // padding-top: rem(35);
         }
     }
 
     &__img {
-        // width: rem(170);
         width: rem(210);
         height: rem(110);
-        // object-fit: cover;
         object-fit: contain;
-
-        // @media (max-width: 768px) {
-        //     object-fit: contain;
-        // }
 
         &--big {
             width: rem(465);
-
-            // width: rem(785);
-
-            // height: rem(405);
             height: rem(425);
-            // max-width: 555px;
-        }
-
-        &--small {
-            // width: rem(465);
-            // height: rem(425);
-            // max-width: 260px;
         }
     }
 }
@@ -988,22 +876,17 @@
     &__wrapper {
         clip-path: polygon(0 6%, 100% 0%, 100% 93%, 0 100%);
         background-color: #2E96FF;
-        // display: grid;
-        // grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
         display: flex;
         justify-content: center;
         align-items: center;
-        // flex-wrap: wrap;
         @include adaptiveValue("padding-bottom", 100, 20);
         @include adaptiveValue("padding-top", 100, 20);
         @include adaptiveValue("padding-left", 65, 20);
         @include adaptiveValue("padding-right", 65, 20);
         @include adaptiveValue("gap", 100, 10);
 
-
         @media (max-width: 768px) {
-            display: block;
-            // лутьше грид
+            display: block; // лутьше грид
         }
     }
 
@@ -1027,10 +910,6 @@
 
     &__text {
         color: $white;
-
-        // @media (max-width: 576px) {
-        //     margin-bottom: rem(20);
-        // }
     }
 }
 
@@ -1082,8 +961,8 @@
 .footer {
     background-color: #140A03;
     color: $white;
-    padding-bottom: rem(105);
-    padding-top: rem(120);
+    padding-bottom: rem(60);
+    padding-top: rem(60);
     position: relative;
 
     &::before {
@@ -1109,38 +988,23 @@
     }
 
     &__wrapper {
-        // display: grid;
-        // grid-template-columns: repeat(auto-fit, minmax(22rem, 1fr));
         display: flex;
-        // justify-content: space-between;
+        justify-content: space-between;
         flex-wrap: wrap;
-        // justify-items: center;
-        // @include adaptiveValue("gap", 130, 20);
-        gap: rem(220);
-        // 193
-        height: rem(280);
-        // придумать по возможности что бы средний блок был всегда по середи не !!!
-        // и высоту футера по пп!!!
+        gap: 80px;
 
         @media (max-width: 768px) {
             height: 100%;
-        }
-
-        @media (max-width: 768px) {
             justify-content: center;
         }
 
-        // @media (max-width: 576px) {
-        //     gap: rem(40);
-        // }
+        @media (max-width: 576px) {
+            @include adaptiveValue("gap", 220, 20);
+        }
     }
 
     &__items {
         align-self: center;
-
-        @media (max-width: 1200px) {
-            text-align: end; //проверить куда оно надо
-        }
 
         @media (max-width: 576px) {
             width: 100%;
@@ -1154,30 +1018,36 @@
                 order: -1;
                 text-align: left;
             }
-
-
         }
     }
 
     &__box {
         align-self: Start;
-        max-width: rem(180); //возможно в др сборках надо
+        max-width: rem(180); //возможно в др сборках надо!!
+        margin-right: rem(140);
 
-        // margin-right: rem(140);
+        @media (max-width: 768px) {
+            margin-right: 0;
+        }
+
         @media (max-width: 576px) {
             order: -1;
         }
+    }
+
+    &__img {
+        margin-top: 5px;
+        width: rem(180);
+        height: rem(95);
+        object-fit: cover;
+        margin-bottom: rem(65);
+        display: block;
     }
 
     &__item {
         &:not(:last-child) {
             margin-bottom: rem(35);
         }
-    }
-
-    &__logo {
-        margin-bottom: rem(65);
-        display: block;
     }
 
     &__link {
@@ -1200,21 +1070,9 @@
             color: $orange;
         }
     }
-
-    // &__link span {
-    //     color: $orange;
-    //     // не было спана ошибка в этой версии
-    // }
-
-    &__img {
-        width: rem(180);
-        height: rem(95);
-    }
 }
 
 .social {
-    // display: grid;
-    // grid-template-columns: repeat(3, 1fr);
     display: flex;
     justify-content: space-between;
     gap: rem(25);
